; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/infiniband-diags/src/extr_ibqueryerrors.c_query_cap_mask.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/infiniband-diags/src/extr_ibqueryerrors.c_query_cap_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i64, i32 }

@lid2sl_table = common dso_local global i32* null, align 8
@ibd_timeout = common dso_local global i32 0, align 4
@CLASS_PORT_INFO = common dso_local global i32 0, align 4
@ibmad_port = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [45 x i8] c"classportinfo query failed on %s, %s port %d\00", align 1
@summary = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i8*, i32, i32*)* @query_cap_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @query_cap_mask(%struct.TYPE_6__* %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca [1024 x i32], align 16
  %11 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %12 = bitcast [1024 x i32]* %10 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %12, i8 0, i64 4096, i1 false)
  %13 = load i32*, i32** @lid2sl_table, align 8
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = getelementptr inbounds i32, i32* %13, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 8
  %21 = getelementptr inbounds [1024 x i32], [1024 x i32]* %10, i64 0, i64 0
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* @ibd_timeout, align 4
  %25 = load i32, i32* @CLASS_PORT_INFO, align 4
  %26 = load i32, i32* @ibmad_port, align 4
  %27 = call i32 @pma_query_via(i32* %21, %struct.TYPE_6__* %22, i32 %23, i32 %24, i32 %25, i32 %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %37, label %29

29:                                               ; preds = %4
  %30 = load i8*, i8** %7, align 8
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %32 = call i32 @portid2str(%struct.TYPE_6__* %31)
  %33 = load i32, i32* %8, align 4
  %34 = call i32 @IBWARN(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i8* %30, i32 %32, i32 %33)
  %35 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @summary, i32 0, i32 0), align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @summary, i32 0, i32 0), align 4
  store i32 -1, i32* %5, align 4
  br label %43

37:                                               ; preds = %4
  %38 = getelementptr inbounds [1024 x i32], [1024 x i32]* %10, i64 0, i64 0
  %39 = getelementptr inbounds i32, i32* %38, i64 2
  %40 = call i32 @memcpy(i32* %11, i32* %39, i32 4)
  %41 = load i32, i32* %11, align 4
  %42 = load i32*, i32** %9, align 8
  store i32 %41, i32* %42, align 4
  store i32 0, i32* %5, align 4
  br label %43

43:                                               ; preds = %37, %29
  %44 = load i32, i32* %5, align 4
  ret i32 %44
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @pma_query_via(i32*, %struct.TYPE_6__*, i32, i32, i32, i32) #2

declare dso_local i32 @IBWARN(i8*, i8*, i32, i32) #2

declare dso_local i32 @portid2str(%struct.TYPE_6__*) #2

declare dso_local i32 @memcpy(i32*, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
